hphp/hack/test/typecheck/tconst/lvar_expr_dependent.php.exp
[<expr#341>::T][\C::T]Tnum
[<expr#341>::T][\C::T]Tnum
[<expr#341>::T][\C::T]Tnum
App \I<>
[<expr#341>::T][\I::T]Tnum
[<expr#351>::T][\C::T]Tnum
File "lvar_expr_dependent.php", line 42, characters 13-18:
Invalid argument (Typing[4110])
File "lvar_expr_dependent.php", line 13, characters 26-32:
This is the expression dependent type <expr#351>::T
  that is compatible with the abstract type constant C::T
  that is compatible with a num (int/float)
File "lvar_expr_dependent.php", line 42, characters 5-6:
  where '<expr#351>' is a reference to this expression
File "lvar_expr_dependent.php", line 10, characters 28-30:
  resulting from expanding a type constant as follows:
    C::T
File "lvar_expr_dependent.php", line 10, characters 28-30:
It is incompatible with a num (int/float)
File "lvar_expr_dependent.php", line 12, characters 35-41:
Considering the constraint on '<expr#341>::T'
File "lvar_expr_dependent.php", line 38, characters 14-15:
  where '<expr#341>' is a reference to this expression
File "lvar_expr_dependent.php", line 10, characters 28-30:
  resulting from expanding a type constant as follows:
    C::T
